--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 तुलसीदास सदा हरि चेरा। कीजै नाथ हृदय महं डेरा।।
 
 <br>
-							Sriram <a href="https://templated.co/">Jai Ram</a> and released under the Creative Commons License.</p>
+							Sriram <a href="https://templated.co/">Jai Ram</a> .</p>
 						</header><a href="#main" class="more">Learn More</a>
 					</div>
 				</section><!-- Main --><div id="main">
@@ -86,7 +86,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic03.jpg" alt="" width="600" height="338"></a>
+								<a href="....... " class="image fit"><img src="images/pic03.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
@@ -95,7 +95,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" width="600" height="338"></a>
+								<a href="............" class="image fit"><img src="images/pic04.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
@@ -104,7 +104,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" width="600" height="338"></a>
+								<a href=".........." class="image fit"><img src="images/pic05.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
@@ -113,7 +113,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" width="600" height="338"></a>
+								<a href="............" class="image fit"><img src="images/pic06.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
