--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 							<div class="box">
 								<a href="............" class="image fit"><img src="images/pic06.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>Sri Ram</h3>
+									<p>Sita Ram.</p>
+									<a href="" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
