--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<li><a href="#"class="prahladsoni.baif@gmail.com"><span class="label">Email</span></a></li>
 						</ul></div>
 				</footer><div class="copyright">
-				Site made with: <a href="https://templated.co/">Templated</a>.
+				Site made with: <a href="https://Prahlad soni/">Templated</a>.
 			</div>
 
 		<!-- Scripts -->
