--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 			<!-- Footer -->
 				<footer id="footer"><div class="inner">
 						<h2>Etiam veroeros lorem</h2>
-						<p>. </p>
+						<p>. 
 
 						<ul>
 							<li><a href="#"class="prahladsoni.baif@gmail.com"><span class="label">Email</span></a></li>
 						</ul></div>
 				</footer><div class="copyright">
-				Site made with: <a href="https://Prahlad soni/">Templated</a>.
+				Site made with: <a href="https://Prahlad soni/">Templated</a>. </p>
 			</div>
 
 		<!-- Scripts -->
