--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<div class="box">
 								<a href="" class="image fit"><img src="images/lord-krishna.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
+									<h3>Hare Krishna</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
 									<a href="" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
