--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<li><a href="#"class="prahladsoni.baif@gmail.com"><span class="label">Email</span></a></li>
 						</ul></div>
 				</footer><div class="copyright">
-				Site made with: <a href="https://Prahlad soni/">Templated</a>. </p>
+				<p> </p>Site made with: <a ref="Prahlad soni/"> </a>. </p>
 			</div>
 
 		<!-- Scripts -->
