--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 			<!-- Footer -->
 				<footer id="footer"><div class="inner">
-						<h2>Etiam veroeros lorem</h2>
+						<h2>Jai Sri Radhe</h2>
 						<p>. 
 
 						<ul>
