--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<div class="inner">
 									<h3>Hare Krishna Hare Krishna Krishna Krishna Hare Hare</h3>
 									<p>Hare Rama Hare Rama Rama Rama Hare Hare.</p>
-									<a href="" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="" class="button fit" data-poptrox="youtube,800x400"> </a>
 								</div>
 							</div>
 
