--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			-->
 				<section id="banner" data-video="images/banner"><div class="inner">
 						<header><h1>Jai Hanuman</h1>
-							<p>Jai श्रीगुरु चरन सरोज रज, निजमन मुकुरु सुधारि। बरनउं रघुबर बिमल जसु, जो दायक फल चारि।।
+						<b>	<p>Jai श्रीगुरु चरन सरोज रज, निजमन मुकुरु सुधारि। बरनउं रघुबर बिमल जसु, जो दायक फल चारि।।
 बुद्धिहीन तनु जानिके, सुमिरौं पवन-कुमार। बल बुधि बिद्या देहु मोहिं, हरहु कलेस बिकार।।
 चौपाई
 जय हनुमान ज्ञान गुन सागर। जय कपीस तिहुं लोक उजागर।।
@@ -56,7 +56,7 @@
 यह सत बार पाठ कर जोई। छूटहि बन्दि महा सुख होई।।
 जो यह पढ़ै हनुमान चालीसा। होय सिद्धि साखी गौरीसा।।
 तुलसीदास सदा हरि चेरा। कीजै नाथ हृदय महं डेरा।।
-
+					</p>	</b>
 <br>
 							Sriram <a href="https://templated.co/">Jai Ram</a> .</p>
 						</header><a href="#main" class="more">Learn More</a>
