--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 				formats to work correctly.
 			-->
 				<section id="banner" data-video="images/banner"><div class="inner">
-						<header><h1>Jai Hanuman</h1>
-					<i>	<b>	<p>Jai श्रीगुरु चरन सरोज रज, निजमन मुकुरु सुधारि। बरनउं रघुबर बिमल जसु, जो दायक फल चारि।।
+						<header><h1>Jai Hanuman</h1> <br>
+						<b><p>Jai श्रीगुरु चरन सरोज रज, निजमन मुकुरु सुधारि। बरनउं रघुबर बिमल जसु, जो दायक फल चारि।।
 बुद्धिहीन तनु जानिके, सुमिरौं पवन-कुमार। बल बुधि बिद्या देहु मोहिं, हरहु कलेस बिकार।।
 चौपाई
 जय हनुमान ज्ञान गुन सागर। जय कपीस तिहुं लोक उजागर।।
