--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 			-->
 				<section id="banner" data-video="images/banner"><div class="inner">
 						<header><h1>Jai Hanuman</h1>
-							
+				body {
+  color: red;
+}			
 	<b> <p> श्रीगुरु चरन सरोज रज, निजमन मुकुरु सुधारि। बरनउं रघुबर बिमल जसु, जो दायक फल चारि।।
 बुद्धिहीन तनु जानिके, सुमिरौं पवन-कुमार। बल बुधि बिद्या देहु मोहिं, हरहु कलेस बिकार।।
 चौपाई
