--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<a href="#" class="image fit"><img src="images/Slasarbalaji.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
 									<h3>Salasar Balaji</h3>
-									<p></p>
+									<p>Salasar Balaji</p>
 									<a href="#" class="button fit" data-poptrox="images/bageshwarbalaji.jpg"></a>
 								</div>
 							</div>
@@ -78,7 +78,7 @@
 								<a href="#" class="image fit"><img src="images/bageshwarbalaji.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
 									<h3>Bageshwar Balaji</h3>
-									<p></p>
+									<p>Bageshwar Balaji</p>
 									<a href="#" class="button fit" data-poptrox="images/bageshwarbalaji.jpg"></a>
 								</div>
 							</div>
