--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Full Motion by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>Hanuman Chalisha</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body id="top">
+--><html><head><title>Full Motion</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body id="top">
 
 			<!-- Banner -->
 			<!--
@@ -12,53 +12,10 @@
 				formats to work correctly.
 			-->
 				<section id="banner" data-video="images/banner"><div class="inner">
-						<header><h1>Sri Hanuman Chalisha</h1>
-							<p>श्रीगुरु चरन सरोज रज, निजमन मुकुरु सुधारि। बरनउं रघुबर बिमल जसु, जो दायक फल चारि।।
-								बुद्धिहीन तनु जानिके, सुमिरौं पवन-कुमार। बल बुधि बिद्या देहु मोहिं, हरहु कलेस बिकार।।
-								चौपाई
-								जय हनुमान ज्ञान गुन सागर। जय कपीस तिहुं लोक उजागर।।
-								राम दूत अतुलित बल धामा। अंजनि-पुत्र पवनसुत नामा।।
-								महाबीर बिक्रम बजरंगी। कुमति निवार सुमति के संगी।।
-								कंचन बरन बिराज सुबेसा। कानन कुण्डल कुँचित केसा।।
-								हाथ बज्र औ ध्वजा बिराजे। कांधे मूंज जनेउ साजे।।
-								शंकर स्वयं केसरी नंदन। तेज प्रताप महा जग वंदन।।
-								बिद्यावान गुनी अति चातुर। राम काज करिबे को आतुर।।
-								प्रभु चरित्र सुनिबे को रसिया। राम लखन सीता मन बसिया।।
-								सूक्ष्म रूप धरि सियहिं दिखावा। बिकट रूप धरि लंक जरावा।।
-								भीम रूप धरि असुर संहारे। रामचन्द्र के काज संवारे।।
-								लाय सजीवन लखन जियाये। श्री रघुबीर हरषि उर लाये।।
-								रघुपति कीन्ही बहुत बड़ाई। तुम मम प्रिय भरतहि सम भाई।।
-								सहस बदन तुम्हरो जस गावैं। अस कहि श्रीपति कण्ठ लगावैं।।
-								सनकादिक ब्रह्मादि मुनीसा। नारद सारद सहित अहीसा।।
-								जम कुबेर दिगपाल जहां ते। कबि कोबिद कहि सके कहां ते।।
-								तुम उपकार सुग्रीवहिं कीन्हा। राम मिलाय राज पद दीन्हा।।
-								तुम्हरो मंत्र बिभीषन माना। लंकेश्वर भए सब जग जाना।।
-								जुग सहस्र जोजन पर भानु। लील्यो ताहि मधुर फल जानू।।
-								प्रभु मुद्रिका मेलि मुख माहीं। जलधि लांघि गये अचरज नाहीं।।
-								दुर्गम काज जगत के जेते। सुगम अनुग्रह तुम्हरे तेते।।
-								राम दुआरे तुम रखवारे। होत न आज्ञा बिनु पैसारे।।
-								सब सुख लहै तुम्हारी सरना। तुम रच्छक काहू को डर ना।।
-								आपन तेज सम्हारो आपै। तीनों लोक हांक तें कांपै।।
-								भूत पिसाच निकट नहिं आवै। महाबीर जब नाम सुनावै।।
-								नासै रोग हरे सब पीरा। जपत निरन्तर हनुमत बीरा।।
-								संकट तें हनुमान छुड़ावै। मन क्रम बचन ध्यान जो लावै।।
-								सब पर राम रायसिर ताज़ा। तिन के काज सकल तुम साजा।।
-								और मनोरथ जो कोई लावै। सोई अमित जीवन फल पावै।।
-								चारों जुग परताप तुम्हारा। है परसिद्ध जगत उजियारा।।
-								साधु संत के तुम रखवारे।। असुर निकन्दन राम दुलारे।।
-								अष्टसिद्धि नौ निधि के दाता। अस बर दीन जानकी माता।।
-								राम रसायन तुम्हरे पासा। सादर हो रघुपति के दासा।।
-								तुह्मरे भजन राम को पावै। जनम जनम के दुख बिसरावै।।
-								अंत काल रघुबर पुर जाई। जहां जन्म हरिभक्त कहाई।।
-								और देवता चित्त न धरई। हनुमत सेइ सर्ब सुख करई।।
-								सङ्कट कटै मिटै सब पीरा। जो सुमिरै हनुमत बलबीरा।।
-								जय जय जय हनुमान गोसाईं। कृपा करहु गुरुदेव की नाईं।।
-								यह सत बार पाठ कर जोई। छूटहि बन्दि महा सुख होई।।
-								जो यह पढ़ै हनुमान चालीसा। होय सिद्धि साखी गौरीसा।।
-								तुलसीदास सदा हरि चेरा। कीजै नाथ हृदय महं डेरा।।
-								<br>
-							P.Soni <a href="https://templated.co/"></a></p>
-						</header><a href="#main" class="more"></a>
+						<header><h1>Full Motion</h1>
+							<p>A responsive video gallery template with a functional lightbox<br>
+							designed by <a href="https://templated.co/">Templated</a> and released under the Creative Commons License.</p>
+						</header><a href="#main" class="more">Learn More</a>
 					</div>
 				</section><!-- Main --><div id="main">
 					<div class="inner">
@@ -67,19 +24,77 @@
 						<div class="thumbnails">
 
 							<div class="box">
-								<a href="#" class="image fit"><img src="images/Slasarbalaji.jpg" alt="" width="600" height="338"></a>
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic01.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
-									<h3>Salasar Balaji</h3>
-									<p>Salasar Balaji</p>
-									<a href="#" class="button fit" data-poptrox="images/bageshwarbalaji.jpg"></a>
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
+
 							<div class="box">
-								<a href="#" class="image fit"><img src="images/bageshwarbalaji.jpg" alt="" width="600" height="338"></a>
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic02.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
-									<h3>Bageshwar Balaji</h3>
-									<p>Bageshwar Balaji</p>
-									<a href="#" class="button fit" data-poptrox="images/bageshwarbalaji.jpg"></a>
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
-							
+
+							<div class="box">
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic03.jpg" alt="" width="600" height="338"></a>
+								<div class="inner">
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" width="600" height="338"></a>
+								<div class="inner">
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" width="600" height="338"></a>
+								<div class="inner">
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" width="600" height="338"></a>
+								<div class="inner">
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+
+			<!-- Footer -->
+				<footer id="footer"><div class="inner">
+						<h2>Etiam veroeros lorem</h2>
+						<p>Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi, ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit, consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi luctus auctor. Donec sit amet dolor in diam feugiat venenatis. </p>
+
+						<ul class="icons"><li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						</ul></div>
+				</footer><div class="copyright">
+				Site made with: <a href="https://templated.co/">Templated</a>.
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script><script src="assets/js/jquery.scrolly.min.js"></script><script src="assets/js/jquery.poptrox.min.js"></script><script src="assets/js/skel.min.js"></script><script src="assets/js/util.js"></script><script src="assets/js/main.js"></script></body></html>
