--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@ P.Soni<br>
 						<div class="thumbnails">
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic01.jpg" alt="" width="600" height="338"></a>
+								<a href="#"bageshwarbalaji.jpg"><img src="" alt="" width="600" height="338"></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
+									<h3>Salasar Balaji</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
 									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic02.jpg" alt="" width="600" height="338"></a>
+								<a href="#" class="image fit"><img src="Slasarbalaji.jpg" alt="" width="600" height="338"></a>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
 									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
